--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Hello, Friends!</h1>
+    <h1>Hi, Friends!</h1>
 <pre>
                                                                                           
                                                                                           
